--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>Welcome to the best video Platform!</h1>
+
+<div class="container">
+    <div class="row">
+        <% @videos.each do |video| %>
+        <div class="card" style="width: 36rem;">
+            <iframe src='<%= video.link%>' frameborder='0' allowfullscreen class="<%= allow_reproduce(video) ? '' : 'noClick'%>"></iframe>
+            <div class="card-body">
+                <h5 class="card-title"><%= link_to "#{video.title}", get_video_link(video) %></h5>
+                <%= "<span class='badge bg-secondary'>Premium</span>".html_safe if video.video_type == 'premium' %>
+            </div>
+        </div>
+        <% end %>
+    </div>
+</div>
