--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,18 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <%= link_to 'Zype video', root_path, class: 'navbar-brand' %>
+    <%= link_to 'Zype video', '#', class: 'navbar-brand' %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="d-flex">
-            <% if user_signed_in? %>
-             <%= link_to 'Log out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
-            <% else %>
-             <%= link_to 'Sign In', new_user_session_path, class: 'nav-link' %>
-            <% end %>
-        </li>
+
       </ul>
     </div>
   </div>
