Create sessions controller

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-
+        <li class="d-flex">
+             <%= link_to 'Sign In', session_sign_in_path, class: 'nav-link' %>
+        </li>
       </ul>
     </div>
   </div>
