--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,13 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <%= link_to 'Zype video', '#', class: 'navbar-brand' %>
+    <%= link_to 'Zype video', '/', class: 'navbar-brand' %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="d-flex">
-             <%= link_to 'Sign In', session_sign_in_path, class: 'nav-link' %>
+            <%= link_to 'Sign In', session_sign_in_path, class: 'nav-link signin-link' %>
+            <span class="signed-email"></span>
         </li>
       </ul>
     </div>
