--- a/app/views/session/sign_in.html.erb
+++ b/app/views/session/sign_in.html.erb
@@ -9,6 +9,9 @@
   <div class="field">
     <%= label_tag :password %><br />
     <%= password_field_tag :password %>
+    <%= hidden_field_tag :id, params[:id] %>
+    <%= hidden_field_tag :subscription_required, params[:subscription_required] %>
+    <%= hidden_field_tag :title, params[:title] %>
   </div>
   <div class="actions">
     <%= submit_tag "Log in" %>
